src/lexer.cpp
/* Generated by re2c 1.0.3 on Fri May  4 11:08:48 2018 */
#line 1 "../re2c/lexer.re"
#include "lexer.h"

#include <cstdint>

#include <stack>

namespace{
  
  constexpr uint64_t utf8Mask_(int bytes){
    if(bytes >= 2){
      int mask1 = 0x8000, mask2 = 0x80;
      for(; bytes > 2; --bytes){
        mask1 = (mask1 << 8) | (mask1 << 7);
        mask2 = (mask2 << 8) | 0x80;
      }
      return mask1 | mask2;
    }else return 0;
  }
  
  template<int bytes>
  inline uint64_t splitUtf8CodePoint_(uint64_t code_point){
    uint64_t mask = 0x3f;
    for(int i = 1; i < bytes; ++i){
      code_point = (code_point & mask) | ((code_point & ~mask) << 2);
      mask = (mask << 8) | 0xff;
    }
    return code_point;
  }
  
  template<int chars>
  inline void enterUtf8CodePoint_(std::string* dest, const char* code){
    uint64_t code_point;
    code -= chars;
    for(int i = 0; i < chars; ++i){
      code_point <<= 8;
      if(isdigit(*code)){
        code_point |= (*code) - '0';
      }else{
        code_point |= (*code | 0x20) - 'a' + 10;
      }
      ++code;
    }
    if(code_point < 0x80){
      dest->push_back((char)code_point);
      return;
    }else{
      int bytes = 2;
      for(uint64_t cp = code_point >> 11; cp > 0; ++bytes, cp >> 5);
      
      switch(bytes){
      case 2:
        code_point = splitUtf8CodePoint_<2>(code_point) | utf8Mask_(2);
        goto write_2_bytes;
      case 3:
        code_point = splitUtf8CodePoint_<3>(code_point) | utf8Mask_(3);
        goto write_3_bytes;
      case 4:
        code_point = splitUtf8CodePoint_<4>(code_point) | utf8Mask_(4);
        goto write_4_bytes;
      case 5:
        code_point = splitUtf8CodePoint_<5>(code_point) | utf8Mask_(5);
        goto write_5_bytes;
      case 6:
        code_point = splitUtf8CodePoint_<6>(code_point) | utf8Mask_(6);
        goto write_6_bytes;
      case 7:
        code_point = splitUtf8CodePoint_<7>(code_point) | utf8Mask_(7);
        goto write_7_bytes;
      }
      
    write_7_bytes:
      dest->push_back(code[-7]);
    write_6_bytes:
      dest->push_back(code[-6]);
    write_5_bytes:
      dest->push_back(code[-5]);
    write_4_bytes:
      dest->push_back(code[-4]);
    write_3_bytes:
      dest->push_back(code[-3]);
    write_2_bytes:
      dest->push_back(code[-2]);
      dest->push_back(code[-1]);
    }
  }
}

Lexer::Lexer(const char* mem){
  this->mem_ = mem;
}

std::vector<Lexeme> Lexer::lex(std::vector<std::unique_ptr<char[]>>* errors){
  const char* marker;
  const char* token;
  
  const char* reader = this->mem_;
  int counter = 0;
  
  #define YYDEBUG(state, current)
  
  std::vector<Lexeme> lexemes;
  std::stack<char> br_stack;
  br_stack.push('{');
  
  uint16_t line = 1;
  const char* line_start = reader;
  
  #define PLACE_LEXEME(params) \
    lexemes.emplace_back(params, std::make_pair(line, token - line_start));
  #define PUT_LEXEME(params) \
    lexemes.emplace_back(params, std::make_pair(line, token - line_start)); \
    continue;
  
  for(;;){
    token = reader;
    
    #line 123 "../re2c/lexer.re"

    
    
#line 124 "../src/lexer.cpp"
{
	char yych;
	unsigned int yyaccept = 0;
	YYDEBUG(0, *reader);
	yych = *reader;
	switch (yych) {
	case 0x00:	goto yy2;
	case 0x01:
	case 0x02:
	case 0x03:
	case 0x04:
	case 0x05:
	case 0x06:
	case 0x07:
	case 0x08:
	case 0x0E:
	case 0x0F:
	case 0x10:
	case 0x11:
	case 0x12:
	case 0x13:
	case 0x14:
	case 0x15:
	case 0x16:
	case 0x17:
	case 0x18:
	case 0x19:
	case 0x1A:
	case 0x1B:
	case 0x1C:
	case 0x1D:
	case 0x1E:
	case 0x1F:
	case '#':
	case '$':
	case '&':
	case '\'':
	case '?':
	case '@':
	case '\\':
	case '^':
	case '`':
	case '|':
	case '~':
	case 0x7F:	goto yy4;
	case '\t':
	case '\v':
	case '\f':
	case '\r':
	case ' ':	goto yy6;
	case '\n':	goto yy8;
	case '!':	goto yy10;
	case '"':	goto yy11;
	case '%':	goto yy13;
	case '(':	goto yy15;
	case ')':	goto yy17;
	case '*':	goto yy19;
	case '+':	goto yy21;
	case ',':	goto yy23;
	case '-':	goto yy25;
	case '.':	goto yy27;
	case '/':	goto yy28;
	case '0':	goto yy30;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	case ':':	goto yy34;
	case ';':	goto yy36;
	case '<':	goto yy38;
	case '=':	goto yy40;
	case '>':	goto yy42;
	case '[':	goto yy47;
	case ']':	goto yy49;
	case 'a':	goto yy51;
	case 'e':	goto yy52;
	case 'f':	goto yy53;
	case 'i':	goto yy54;
	case 'n':	goto yy55;
	case 'o':	goto yy56;
	case 'p':	goto yy57;
	case 't':	goto yy58;
	case '{':	goto yy59;
	case '}':	goto yy61;
	default:	goto yy44;
	}
yy2:
	YYDEBUG(2, *reader);
	++reader;
	YYDEBUG(3, *reader);
#line 126 "../re2c/lexer.re"
	{break;}
#line 222 "../src/lexer.cpp"
yy4:
	YYDEBUG(4, *reader);
	++reader;
yy5:
	YYDEBUG(5, *reader);
#line 128 "../re2c/lexer.re"
	{
        if(lexemes.back().type != LexemeType::Error){
          errors->emplace_back(dynSprintf("line %d: Invalid symbol.", line));
          PUT_LEXEME(LexemeType::Error);
        } else continue;
      }
#line 235 "../src/lexer.cpp"
yy6:
	YYDEBUG(6, *reader);
	++reader;
	YYDEBUG(7, *reader);
#line 136 "../re2c/lexer.re"
	{continue;}
#line 242 "../src/lexer.cpp"
yy8:
	YYDEBUG(8, *reader);
	++reader;
	YYDEBUG(9, *reader);
#line 138 "../re2c/lexer.re"
	{
        if(br_stack.top() == '{' && isStopLexeme(lexemes.back())){
          PLACE_LEXEME(LexemeType::Newline);
        }
        ++line;
        line_start = reader;
        continue;
      }
#line 256 "../src/lexer.cpp"
yy10:
	YYDEBUG(10, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy63;
	default:	goto yy5;
	}
yy11:
	YYDEBUG(11, *reader);
	++reader;
	YYDEBUG(12, *reader);
#line 168 "../re2c/lexer.re"
	{
        goto lex_string;
      }
#line 272 "../src/lexer.cpp"
yy13:
	YYDEBUG(13, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy65;
	default:	goto yy14;
	}
yy14:
	YYDEBUG(14, *reader);
#line 178 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Mod)}
#line 284 "../src/lexer.cpp"
yy15:
	YYDEBUG(15, *reader);
	++reader;
	YYDEBUG(16, *reader);
#line 200 "../re2c/lexer.re"
	{
        br_stack.push('(');
        PUT_LEXEME(LexemeType::LParen)
      }
#line 294 "../src/lexer.cpp"
yy17:
	YYDEBUG(17, *reader);
	++reader;
	YYDEBUG(18, *reader);
#line 212 "../re2c/lexer.re"
	{
        if(br_stack.top() == '('){
          br_stack.pop();
          PUT_LEXEME(LexemeType::RParen)
        }else{
          errors->emplace_back(dynSprintf("line %d: Unexpected ')'.", line));
          PUT_LEXEME(LexemeType::Error);
        }
      }
#line 309 "../src/lexer.cpp"
yy19:
	YYDEBUG(19, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy67;
	default:	goto yy20;
	}
yy20:
	YYDEBUG(20, *reader);
#line 176 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Mul)}
#line 321 "../src/lexer.cpp"
yy21:
	YYDEBUG(21, *reader);
	yych = *++reader;
	switch (yych) {
	case '+':	goto yy69;
	case '=':	goto yy71;
	default:	goto yy22;
	}
yy22:
	YYDEBUG(22, *reader);
#line 174 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Plus)}
#line 334 "../src/lexer.cpp"
yy23:
	YYDEBUG(23, *reader);
	++reader;
	YYDEBUG(24, *reader);
#line 195 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Comma)}
#line 341 "../src/lexer.cpp"
yy25:
	YYDEBUG(25, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy73;
	default:	goto yy26;
	}
yy26:
	YYDEBUG(26, *reader);
#line 175 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Minus)}
#line 353 "../src/lexer.cpp"
yy27:
	YYDEBUG(27, *reader);
	yych = *++reader;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy75;
	default:	goto yy5;
	}
yy28:
	YYDEBUG(28, *reader);
	yych = *++reader;
	switch (yych) {
	case '*':	goto yy78;
	case '/':	goto yy80;
	case '=':	goto yy83;
	default:	goto yy29;
	}
yy29:
	YYDEBUG(29, *reader);
#line 177 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Div)}
#line 383 "../src/lexer.cpp"
yy30:
	YYDEBUG(30, *reader);
	yyaccept = 0;
	yych = *(marker = ++reader);
	switch (yych) {
	case 'B':
	case 'b':	goto yy85;
	case 'O':
	case 'o':	goto yy88;
	case 'X':
	case 'x':	goto yy89;
	default:	goto yy33;
	}
yy31:
	YYDEBUG(31, *reader);
#line 152 "../re2c/lexer.re"
	{PUT_LEXEME(strtoull(token, nullptr, 10))}
#line 401 "../src/lexer.cpp"
yy32:
	YYDEBUG(32, *reader);
	yych = *++reader;
yy33:
	YYDEBUG(33, *reader);
	switch (yych) {
	case '.':	goto yy75;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	case 'E':
	case 'e':	goto yy87;
	default:	goto yy31;
	}
yy34:
	YYDEBUG(34, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy90;
	default:	goto yy35;
	}
yy35:
	YYDEBUG(35, *reader);
#line 198 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Colon)}
#line 434 "../src/lexer.cpp"
yy36:
	YYDEBUG(36, *reader);
	++reader;
	YYDEBUG(37, *reader);
#line 197 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Semicolon)}
#line 441 "../src/lexer.cpp"
yy38:
	YYDEBUG(38, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy92;
	default:	goto yy39;
	}
yy39:
	YYDEBUG(39, *reader);
#line 191 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Lt)}
#line 453 "../src/lexer.cpp"
yy40:
	YYDEBUG(40, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy94;
	default:	goto yy41;
	}
yy41:
	YYDEBUG(41, *reader);
#line 181 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Assign)}
#line 465 "../src/lexer.cpp"
yy42:
	YYDEBUG(42, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy96;
	default:	goto yy43;
	}
yy43:
	YYDEBUG(43, *reader);
#line 190 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Gt)}
#line 477 "../src/lexer.cpp"
yy44:
	YYDEBUG(44, *reader);
	yych = *++reader;
yy45:
	YYDEBUG(45, *reader);
	switch (yych) {
	case 0x00:
	case 0x01:
	case 0x02:
	case 0x03:
	case 0x04:
	case 0x05:
	case 0x06:
	case 0x07:
	case 0x08:
	case '\t':
	case '\n':
	case '\v':
	case '\f':
	case '\r':
	case 0x0E:
	case 0x0F:
	case 0x10:
	case 0x11:
	case 0x12:
	case 0x13:
	case 0x14:
	case 0x15:
	case 0x16:
	case 0x17:
	case 0x18:
	case 0x19:
	case 0x1A:
	case 0x1B:
	case 0x1C:
	case 0x1D:
	case 0x1E:
	case 0x1F:
	case ' ':
	case '!':
	case '"':
	case '#':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case ':':
	case ';':
	case '<':
	case '=':
	case '>':
	case '?':
	case '@':
	case '[':
	case '\\':
	case ']':
	case '^':
	case '`':
	case '{':
	case '|':
	case '}':
	case '~':
	case 0x7F:	goto yy46;
	default:	goto yy44;
	}
yy46:
	YYDEBUG(46, *reader);
#line 273 "../re2c/lexer.re"
	{
        StringView view(token, reader);
        String* str;
        auto it = this->string_table.find(view);
        if(it == this->string_table.end()){
          str = this->string_table.insert(
            std::make_pair(
              view,
              rc_ptr<String>(make_new<String>(view.first, view.second))
            )
          ).first->second.get();
        }else{
          str = it->second.get();
        }
        lexemes.emplace_back(
          LexemeType::Identifier,
          str,
          std::make_pair(line, token - line_start)
        );
        
        continue;
      }
#line 576 "../src/lexer.cpp"
yy47:
	YYDEBUG(47, *reader);
	++reader;
	YYDEBUG(48, *reader);
#line 208 "../re2c/lexer.re"
	{
        br_stack.push('[');
        PUT_LEXEME(LexemeType::LBracket)
      }
#line 586 "../src/lexer.cpp"
yy49:
	YYDEBUG(49, *reader);
	++reader;
	YYDEBUG(50, *reader);
#line 233 "../re2c/lexer.re"
	{
        if(br_stack.top() == '['){
          br_stack.pop();
          PUT_LEXEME(LexemeType::RBracket)
        }else{
          errors->emplace_back(dynSprintf("line %d: Unexpected ']'.", line));
          PUT_LEXEME(LexemeType::Error);
        }
      }
#line 601 "../src/lexer.cpp"
yy51:
	YYDEBUG(51, *reader);
	yych = *++reader;
	switch (yych) {
	case 'n':	goto yy98;
	default:	goto yy45;
	}
yy52:
	YYDEBUG(52, *reader);
	yych = *++reader;
	switch (yych) {
	case 'l':	goto yy99;
	default:	goto yy45;
	}
yy53:
	YYDEBUG(53, *reader);
	yych = *++reader;
	switch (yych) {
	case 'a':	goto yy100;
	case 'o':	goto yy101;
	case 'u':	goto yy102;
	default:	goto yy45;
	}
yy54:
	YYDEBUG(54, *reader);
	yych = *++reader;
	switch (yych) {
	case 'f':	goto yy103;
	default:	goto yy45;
	}
yy55:
	YYDEBUG(55, *reader);
	yych = *++reader;
	switch (yych) {
	case 'o':	goto yy105;
	case 'u':	goto yy106;
	default:	goto yy45;
	}
yy56:
	YYDEBUG(56, *reader);
	yych = *++reader;
	switch (yych) {
	case 'r':	goto yy107;
	default:	goto yy45;
	}
yy57:
	YYDEBUG(57, *reader);
	yych = *++reader;
	switch (yych) {
	case 'r':	goto yy109;
	default:	goto yy45;
	}
yy58:
	YYDEBUG(58, *reader);
	yych = *++reader;
	switch (yych) {
	case 'r':	goto yy110;
	default:	goto yy45;
	}
yy59:
	YYDEBUG(59, *reader);
	++reader;
	YYDEBUG(60, *reader);
#line 204 "../re2c/lexer.re"
	{
        br_stack.push('{');
        PUT_LEXEME(LexemeType::LBrace)
      }
#line 670 "../src/lexer.cpp"
yy61:
	YYDEBUG(61, *reader);
	++reader;
	YYDEBUG(62, *reader);
#line 221 "../re2c/lexer.re"
	{
        if(br_stack.top() == '{'){
          br_stack.pop();
          if(lexemes.back().type == LexemeType::Newline){
            lexemes.pop_back();
          }
          PUT_LEXEME(LexemeType::RBrace)
        }else{
          errors->emplace_back(dynSprintf("line %d: Unexpected '}'.", line));
          PUT_LEXEME(LexemeType::Error);
        }
      }
#line 688 "../src/lexer.cpp"
yy63:
	YYDEBUG(63, *reader);
	++reader;
	YYDEBUG(64, *reader);
#line 189 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Neq)}
#line 695 "../src/lexer.cpp"
yy65:
	YYDEBUG(65, *reader);
	++reader;
	YYDEBUG(66, *reader);
#line 186 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::ModAssign)}
#line 702 "../src/lexer.cpp"
yy67:
	YYDEBUG(67, *reader);
	++reader;
	YYDEBUG(68, *reader);
#line 184 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::MulAssign)}
#line 709 "../src/lexer.cpp"
yy69:
	YYDEBUG(69, *reader);
	yych = *++reader;
	switch (yych) {
	case '=':	goto yy111;
	default:	goto yy70;
	}
yy70:
	YYDEBUG(70, *reader);
#line 179 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::Append)}
#line 721 "../src/lexer.cpp"
yy71:
	YYDEBUG(71, *reader);
	++reader;
	YYDEBUG(72, *reader);
#line 182 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::AddAssign)}
#line 728 "../src/lexer.cpp"
yy73:
	YYDEBUG(73, *reader);
	++reader;
	YYDEBUG(74, *reader);
#line 183 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::SubAssign)}
#line 735 "../src/lexer.cpp"
yy75:
	YYDEBUG(75, *reader);
	yych = *++reader;
	YYDEBUG(76, *reader);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy75;
	case 'E':
	case 'e':	goto yy87;
	default:	goto yy77;
	}
yy77:
	YYDEBUG(77, *reader);
#line 165 "../re2c/lexer.re"
	{PUT_LEXEME(atof(token))}
#line 759 "../src/lexer.cpp"
yy78:
	YYDEBUG(78, *reader);
	++reader;
	YYDEBUG(79, *reader);
#line 149 "../re2c/lexer.re"
	{counter = 1; goto lex_block_comment;}
#line 766 "../src/lexer.cpp"
yy80:
	YYDEBUG(80, *reader);
	yych = *++reader;
	YYDEBUG(81, *reader);
	switch (yych) {
	case 0x00:
	case '\n':	goto yy82;
	default:	goto yy80;
	}
yy82:
	YYDEBUG(82, *reader);
#line 148 "../re2c/lexer.re"
	{continue;}
#line 780 "../src/lexer.cpp"
yy83:
	YYDEBUG(83, *reader);
	++reader;
	YYDEBUG(84, *reader);
#line 185 "../re2c/lexer.re"
	{PUT_LEXEME(LexemeType::DivAssign)}
#line 787 "../src/lexer.cpp"
yy85:
	YYDEBUG(85, *reader);
	yych = *++reader;
	switch (yych) {
	case '0':
	case '1':	goto yy113;
	default:	goto yy86;
	}
yy86:
	YYDEBUG(86, *reader);
	reader = marker;
	if (yyaccept == 0) {
		goto yy31;
	} else {
		goto yy77;
	}
yy87:
	YYDEBUG(87, *reader);
	yyaccept = 1;
	yych = *(marker = ++reader);
	switch (yych) {
	case '+':
	case '-':	goto yy116;
	default:	goto yy118;
	}
yy88:
	YYDEBUG(88, *reader);
	yych = *++reader;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy119;
	default:	goto yy86;
	}
yy89:
